# crate-vscode-generator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
snippets/: rust.code-snippets
src/: error.rs  lib.rs  prelude.rs
src/snippets/: mod.rs  snippet.rs  snippet_builder.rs  snippets_file.rs
tests/: test-rust-snippets.rs  test-snippets.rs
